[gd_scene load_steps=6 format=2]

[ext_resource path="res://Interface/Theme_Main.tres" type="Theme" id=1]
[ext_resource path="res://Interface/IntroCutscene/DialogueBox.gd" type="Script" id=2]
[ext_resource path="res://Interface/IntroCutscene/boss_voice_2.wav" type="AudioStream" id=3]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 6.0
bg_color = Color( 0, 0, 0, 0.901961 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 2
border_color = Color( 0.862745, 0.862745, 0.862745, 1 )
corner_detail = 1

[sub_resource type="AudioStreamRandomPitch" id=2]
audio_stream = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -89.0
margin_right = -10.0
margin_bottom = -10.0
custom_constants/separation = 0
script = ExtResource( 2 )

[node name="Title" type="Label" parent="."]
margin_right = 300.0
margin_bottom = 18.0
mouse_filter = 1
size_flags_vertical = 3
theme = ExtResource( 1 )
text = "Boss"
valign = 2

[node name="DialogueBox" type="PanelContainer" parent="."]
margin_top = 18.0
margin_right = 300.0
margin_bottom = 79.0
mouse_filter = 1
size_flags_vertical = 8
theme = ExtResource( 1 )
custom_styles/panel = SubResource( 1 )

[node name="Text" type="Label" parent="DialogueBox"]
margin_left = 5.0
margin_top = 5.0
margin_right = 295.0
margin_bottom = 55.0
rect_min_size = Vector2( 0, 50 )
theme = ExtResource( 1 )
autowrap = true

[node name="TypingTimer" type="Timer" parent="DialogueBox"]
wait_time = 0.2

[node name="Audio" type="AudioStreamPlayer" parent="."]
stream = SubResource( 2 )
volume_db = -10.0
bus = "UI"

[connection signal="timeout" from="DialogueBox/TypingTimer" to="." method="_on_TypingTimer_timeout"]
